New consent document and main page wording

--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
 				<a id="Data"></a>
 				<div class="inner">
 					<h2>Current MOODS Statistics</h2>
-					<!-- <h4>Last daily update on <span id="last_update_date"> Sat Aug 08 2020 00:00:00 GMT-0500 (Central Daylight Time)</span></h4> -->
 						<div class="stats">
 							<article>
 								<h3><span id="participants"></span>Participants</h3>
@@ -144,11 +143,6 @@
 								<h3><span id="recorded_stressors"></span>Recorded Stressors</h3>
 
 							</article>
-							<!-- <article>
-								<h3><span id="max_concurrent_encounters">1</span> User Encounters at the Largest Crowding Event</h3>
-								<!-- <h4><div id="m d ax_concurrent_encounters_change">(0% daily change)</div></h4> -->
-
-							<!-- </article> -->
 						</div>
 				</div>
 			</section>
@@ -181,7 +175,7 @@
 									<li>Be able to provide your own informed consent and read/understand English language</li>
 									<li>Reside in the United States and intend to maintain residence in the United States for 100-day study period</li>
 								</ul>
-								<p>Please review our <a href="pdfs/MOODS_consent_20200221.pdf">consent form</a> before participating in the MOODS study.</p>
+								<p>Please review our <a href="pdfs/MOODS_consent.pdf">consent form</a> before participating in the MOODS study.</p>
 								<p>This study is limited to 100 participants, organized in groups, enrolled bi-weekly.  Once you have submitted your interest to participate, you will be kept in the selection pool until you are selected or 100 participants have already completed the 100-day study.</p>
 								<p>If interested, please fill out the screening survey (LINK HERE).  If selected, you will receive an email invitation, describing the next steps to complete your enrollment in the MOODS study.</p>
 
