--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
 									<h4>Can I change the time of the notifications?</h4>
 									<p>Yes, you can go to “Settings -> Change daily notification time” in order to set up your preferred notification time. We suggest you set the evening time so you will have time to review the weekly visualizations.</p>
 
-									<h4>What are the episodes that are shown in the app for stressor annotation each evening?</h4>
-									<p>These consist of some time intervals in which the MOODS software’s stress model has detected you to be stressed and some time intervals when you are detected to be not stressed. The reason for showing a mixture of both event types is to obtain an unbiased evaluation of the MOODS stress model.</p>
+									<h4>What are the episodes that are shown in the app for stressor annotation?</h4>
+									<p>These consist of time intervals in which you may be either stressed or non-stressed. The reason for showing a mixture of both event types is to obtain an unbiased evaluation of the MOODS stress model.</p>
 
 									<h4>Can I come back later to the app for annotating the episodes?</h4>
 									<p>No, the annotation process must be completed once you open the app after you receive the notifications. This helps us to ensure that you are annotating your most recent recollection of the stress event(s). However, you can delete the annotated episodes later.</p>
