--- a/index.html
+++ b/index.html
@@ -345,12 +345,21 @@
 
 			<section id="five" class="wrapper">
 				<div class="inner">
-					<h4 style="text-align: center">Website Disclaimer THIS NEEDS REVISED </h4>
-					<p style="text-align: center; font-size:0.8em;">Last Updated April 14, 2021</p>
+					<h4 style="text-align: center">Website Disclaimer</h4>
+					<p style="text-align: center; font-size:0.8em;">Last Updated May 19, 2021</p>
 
-					<p style="font-size:0.8em;">The Center of Excellence for Mobile Sensor Data-to-Knowledge at the University of Memphis (MD2K) is the owner and creator of the MOODS mobile application (Mobile App) and its associated websites (moods.md2k.org) (Website).  Both the Mobile App and the Website offered as a service to the public.  Both are informational only and neither is intended as a substitute for medical advice.  There is no guarantee as to the accuracy, availability or completeness of the information contained within the Mobile App, the Website, or in any of their links.</p>
-					<p style="font-size:0.8em;">Neither MD2K nor the University of Memphis is responsible for any damages arising out of the use of, reference to, or reliance on any information contained within the Mobile App, the Website, or in any of their links.    </p>
-					<p style="font-size:0.8em;">Construction of this Disclaimer and resolution of disputes thereof are governed by the laws of the State of Tennessee.</p>
+					<p style="font-size:0.8em;">The Center of Excellence for Mobile Sensor Data-to-Knowledge at the University of Memphis
+						(MD2K) is the owner and creator of the MOODS mobile application (Mobile App) and its
+						associated websites (moods.md2k.org) (Website). Both the Mobile App and the Website are
+						offered as parts of a research study, as overseen by an Institutional Review Board (IRB). Both
+						are informational only and neither is intended as a substitute for medical advice. There is no
+						guarantee as to the accuracy, availability or completeness of the information contained within the
+						Mobile App, the Website, or in any of their links.</p>
+					<p style="font-size:0.8em;">Neither MD2K nor the University of Memphis is responsible for any damages arising out of the
+						use of, reference to, or reliance on any information contained within the Mobile App, the
+						Website, or in any of the links or information therein.</p>
+					<p style="font-size:0.8em;">Construction of this Disclaimer and resolution of disputes thereof are governed by the laws of
+						the State of Tennessee.</p>
 				</div>
 			</section>
 
