--- a/terms.html
+++ b/terms.html
@@ -55,27 +55,27 @@
 
 					<header>
 						<p style="text-align: center;"><img src="images/moodsLogo300px.png" alt="" style="width: 120px;" /></p>
-						<p style="text-align: center;"><a href="https://moods.md2k.org/privacy.html">Link to mContain Privacy Notice </a><p>
-						<h1>TO BE UPDATED mContain Terms of Use</h1>
-						<p>Last updated May 11, 2020.</p>
+						<p style="text-align: center;"><a href="https://moods.md2k.org/privacy.html">Link to MOODS Privacy Notice </a><p>
+						<h1>Mobile Open Observation of Daily Stressors (MOODS) Terms of Use</h1>
+						<p>Last updated May 19, 2021.</p>
 					</header>
 
 						<h4>AGREEMENT TO TERMS</h4>
-						<p>This is a legally binding agreement between you, whether personally or on behalf of another, (you or your) and the Center of Excellence for Mobile Sensor Data-to-Knowledge at the University of Memphis (MD2K, we, us, or our) concerning your use of the Platform.  </p>
+						<p>This is a legally binding agreement between you, whether personally or on behalf of an another, (you or your) and the Center of Excellence for Mobile Sensor Data-to-Knowledge at the University of Memphis (MD2K, we, us, or our) concerning your use of the Platform.</p>
 						<p>PLEASE READ THESE TERMS OF USE CAREFULLY.  IF YOU DO NOT AGREE TO BE BOUND BY THESE TERMS OF USE, YOU ARE PROHIBITED FROM USING THE PLATFORM AND YOU MUST DISCONTINUE USE IMMEDIATELY.</p>
 						<p>IN THE EVENT OF A MEDICAL EMERGENCY, PLEASE CALL EMERGENCY SERVICES. THE PLATFORM IS INTENDED FOR INFORMATIONAL PURPOSES ONLY AND IS NOT DESIGNED FOR USE IN THE DIAGNOSIS OR TREATMENT OF DISEASES OR OTHER CONDITIONS.  WE DO NOT AND CANNOT PROVIDE MEDICAL ADVICE.  NO CONTENT IS INTENDED TO SERVE AS A SUBSTITUTE FOR MEDICAL ADVICE.  PLEASE CONSULT YOUR HEALTHCARE PROVIDER PRIOR TO MAKING ANY DECISIONS RELATED TO YOUR HEALTH.</p>
-						<p>THE PLATFORM IS INTENDED FOR THOSE RESIDING IN THE UNITED STATES WHO ARE EITHER 18 AND OVER, OR 13 AND OVER WITH THE PERMISSION OF A PARENT OR GUARDIAN.  THE PLATFORM IS NOT TO BE USED BY RESIDENTS OF OTHER LOCATIONS, INCLUDING THE EUROPEAN UNION OR THE EUROPEAN ECONOMIC AREA.   </p>
-						<p>We may make changes to these Terms of Use.  We will alert you about changes by updating the “Last updated” date and by displaying on the Website, for 30 days after changes are made, a notice stating that the Terms of Use have been updated.  You will not receive specific notice of each change.  You will be subject to the changes by continued use of the Platform.</p>
-						<p>These Terms of Use remain in effect unless and until you uninstall the Mobile App from all your devices, and you cease to access the map data on the Website.</p>
+						<p>THE PLATFORM IS INTENDED FOR THOSE RESIDING IN THE UNITED STATES WHO ARE 18 YEARS AND OVER AND WHO HAVE COMPLETED THE INFORMED CONSENT PROCESS FOR RESEARCH INVOLVING HUMAN SUBJECTS.  THE PLATFORM IS NOT TO BE USED BY RESIDENTS OF OTHER LOCATIONS, INCLUDING THE EUROPEAN UNION OR THE EUROPEAN ECONOMIC AREA.   </p>
+						<p>We may make changes to these Terms of Use.  We will alert you about changes by updating the “Last updated” date and by displaying on the Website, for 30 days after changes are made, a notice stating that the Terms of Use have been updated.  You will not receive specific notice of each change.  You will be subject to the changes by continued use of the Platform.  </p>
+						<p>These Terms of Use remain in effect unless and until you uninstall the Mobile App from all your devices, and you cease to access the Website.</p>
 
 						<h4>DEFINITIONS</h4>
 						<p>“Affiliate” means, as to a party, any other entity that directly or indirectly controls, is under common control with, or is controlled by, such party; as used in this definition, “control” and its derivatives mean possession, directly or indirectly, of power to direct the management or policies of an entity.</p>
-						<p> “Documentation” means all documentation (whether printed or in an electronic retrieval format) supplied or made available to User by MD2K for use with or in support of the Platform or its implementation, including without limitation any and all revisions, modifications, and updates thereof as may be supplied or made available by MD2K to User while these Terms of Use are effective and all copies thereof made by or on behalf of User.</p>
+						<p>“Documentation” means all documentation (whether printed or in an electronic retrieval format) supplied or made available to User by MD2K for use with or in support of the Platform or its implementation, including without limitation any and all revisions, modifications, and updates thereof as may be supplied or made available by MD2K to User while these Terms of Use are effective and all copies thereof made by or on behalf of User.</p>
 						<p>“Licensed Materials” means the Platform and the Documentation, including any University Content contained therein.</p>
 						<p>“Loss” means all losses, liabilities, damages, awards, settlements, claims, suits, proceedings, costs and expenses (including reasonable legal fees and disbursements and costs of investigation, litigation, expert witness fees, settlement, judgment, interest, and penalties).</p>
-						<p>“Platform” means the online services and mobile application offered by MD2K.  It includes the mContain mobile application (Mobile App) and its associated websites (mcontain.com, mcontain.info, mcontain.org, and mcontain.md2k.org) (Website), together with any associated software applications, database structures and queries, interfaces, tools, and the like, together with any and all revisions, modifications, and updates thereof, as made available by MD2K to User pursuant to these Terms of Use.  </p>
+						<p>“Platform” means the online services and mobile application offered by MD2K.  It includes the MOODS mobile application (Mobile App) and its associated websites (moods.md2k.org, odin.md2k.org) (Website), together with any associated software applications, database structures and queries, interfaces, tools, and the like, together with any and all revisions, modifications, and updates thereof, as made available by MD2K to User pursuant to these Terms of Use.</p>
 						<p>“User” means any entity that uses or accesses the Platform. </p>
-						<p>“User Data” means all data entered into the Platform by or on behalf of User, as such data is maintained in the Platform from time to time, including any information disclosed by User’s health care providers, including COVID-19 testing centers.</p>
+						<p>“User Data” means all data entered into the Platform by or on behalf of User, as such data is maintained in the Platform from time to time.</p>
 
 						<h4>INTELLECTUAL PROPERTY RIGHTS</h4>
 						<p>Unless otherwise indicated, the Licensed Materials are our proprietary property and all source code, databases, functionality, software, website designs, audio, video, text, photographs, and graphics (Content) and the trademarks, service marks, and logos contained therein (Marks) are owned or controlled by us or licensed to us, and are protected by copyright and trademark laws and various other intellectual property rights and unfair competition laws of the United States, foreign jurisdictions, and international conventions.  You acknowledge that the foregoing constitutes valuable assets and may also constitute trade secrets.  </p>
@@ -88,10 +88,10 @@
 						<p>Provided that you are an intended User, you are granted a revocable, non-exclusive, non-transferable, limited right to install and use the Mobile App on a wireless electronic device owned or controlled by you, and to access and use the Platform in accordance with these Terms of Use.  All rights with respect to the Licensed Materials not explicitly granted to User are reserved.</p>
 
 						<h4>LICENSE TO USE USER DATA </h4>
-						<p>By use of the Mobile App, and for as long as you use the Mobile App, you grant to us a nonexclusive, transferrable, worldwide, royalty-free license to use and disclose data collected from you, as detailed in the Privacy Policy, to:<br />
+						<p>By use of the Mobile App, and for as long as you use the Mobile App, you grant to us a nonexclusive, transferrable, worldwide, royalty-free license to use and disclose data collected from you, as detailed in the Privacy Policy and Informed Consent, to:<br />
 							1. provide, monitor, correct, and improve the Platform, and <br />
 							2. perform services related to the Platform, including displaying your data in either a de-identified manner such that there is no reasonable basis to believe that the information can be used, alone or in combination with other reasonably available information, to identify you as the source of such data or in an aggregate form.  </p>
-						<p>Even after ceasing use of the Mobile App, you continue to grant us a nonexclusive, transferrable, worldwide, royalty-free license to use the data collected from you, as detailed in the Privacy Policy, to use, reproduce, prepare derivative works of, and distribute aggregated data for any lawful purpose and to grant sublicenses.  </p>
+						<p>Even after ceasing use of the Mobile App, you continue to grant us a nonexclusive, transferrable, worldwide, royalty-free license to use the data collected from you, as detailed in the Privacy Policy and Informed Consent, to use, reproduce, prepare derivative works of, and distribute aggregated data for any lawful purpose and to grant sublicenses.  </p>
 						<p>You represent and warrant that you own or have legal right and authority, and will continue to own or maintain the legal right and authority, to grant to us the license set forth herein.  You agree to indemnify, defend, and hold harmless us and any of our affiliates employees or agents from and against any loss arising from or related to a claim of a third party with respect to a breach of the foregoing representations and warranties.</p>
 
 						<h4>THIRD-PARTY MATERIALS </h4>
@@ -100,14 +100,12 @@
 						<h4>USER REPRESENTATIONS</h4>
 						<p>By using the Platform, you represent that you:</p>
 						<ol>
-							<li>have read and understand the Privacy Policy,</li>
-							<li>consent to and authorize, on behalf of yourself and others who may travel with you while the Mobile App’s location services are enabled, the collection, processing, use, and disclosure of information as set forth in the Privacy Policy,  </li>
-							<li>acknowledge and agree that any information disclosed to us pursuant to a HIPAA Authorization Form, or other applicable state medical release form, is no longer protected under HIPAA, its implementing regulations, or any other medical privacy law, </li>
-							<li>have read, understand, and agree to be bound by these Terms of Use, </li>
+							<li>have read, understand, and agree to the Informed Consent; components of this information are also represented in our Privacy Policy,</li>
+							<li>have read, understand, and agree to be bound by these Terms of Use,  </li>
 							<li>are a resident of the United States,</li>
 							<li>are not a resident of the European Union or the European Economic Area, </li>
 							<li>are at least 18 years old, and</li>
-							<li>are either using the Mobile App or Website yourself, or you are the parent or guardian of a minor who is at least 13 years of age and has your permission to use the Mobile App or Website.</li>
+							<li>are using the Mobile App or Website yourself. The Platform is not intended for use by minors or those who cannot provide their own informed consent.</li>
 						</ol>
 						<p>If you misrepresent any of these items, we may suspend or terminate your account and refuse any current or future use of the Platform.  </p>
 
@@ -118,9 +116,7 @@
 							<li>paying all fees or data changes incurred, </li>
 							<li>complying with all instructions provided by us, </li>
 							<li>responding to all requests made by us, </li>
-							<li>using the Mobile App on only one device at a time (so as to improve data integrity), </li>
-							<li>informing those traveling with you and the device on which you are using the Mobile App that location information is being recorded, and </li>
-							<li>providing accurate information when choosing to provide COVID-19 test results. </li>
+							<li>using the Mobile App on only one device at a time (so as to improve data integrity)</li>
 						</ol>
 
 						<h4>PROHIBITED ACTIVITIES</h4>
@@ -128,7 +124,6 @@
 						<p>As a User of the Platform, you agree not to:</p>
 						<ol>
 							<li>undertake any efforts to identity or locate other Users of the Platform,</li>
-							<li>undertake any efforts to identify the results of any other User’s COVID-19 test results,</li>
 							<li>allow another individual to use your device while the Mobile App is installed, </li>
 							<li>use the Platform for any illegal or unauthorized purpose, </li>
 							<li>use the Platform, or any information therein, to harass, discriminate against, or otherwise harm another person, group of persons, or entity, </li>
@@ -160,7 +155,7 @@
 						<h4>MODIFICATIONS, INTERRUPTIONS & ENHANCEMENTS</h4>
 						<p>We may change, modify, or remove contents of the Platform, but we have no obligation to do so.  We may also discontinue all or part of the Platform without notice.  </p>
 						<p>We cannot guarantee the Platform will always be available. We may experience hardware, software, or other problems, or the need to perform maintenance related to the Platform, resulting in interruptions, delays, or errors.  Nothing in these Terms of Use will be construed to obligate us to maintain and support the Platform or to supply any corrections, updates, or releases in connection therewith.</p>
-							<p>From time to time, we may implement enhancements to functionality, but we have no obligation to offer you any features or enhanced functionality.</p>
+						<p>From time to time, we may implement enhancements to functionality, but we have no obligation to offer you any features or enhanced functionality.</p>
 
 						<h4>CORRECTIONS</h4>
 							<p>In response to a reported error, we will use all commercially reasonable efforts to correct the error or to provide a reasonable workaround sufficient to alleviate any substantial adverse effect, provided that you assist us as requested.</p>
@@ -221,7 +216,14 @@
 							201 Administration Bldg, <br />
 							Memphis, TN 38152<br />
 							901-678-2155	</p>
-						<p>Unless necessary, please do not provide us with your name, contact information, mContain ID, or any health information.</p>
+						<p>Unless necessary, please do not provide us with your name, contact information, or MOODS ID.</p>
+						<p>If there are questions about your rights as a research participant in the MOODS study, you may contact us at:</p>
+						<p>
+							Institutional Review Board<br />
+							University of Memphis<br />
+							315 Administration Bldg, <br />
+							Memphis, TN 38152<br />
+							901-678-2705	</p>
 
 
 					</div>
