--- a/index.html
+++ b/index.html
@@ -282,11 +282,14 @@
 									<h4>Is it mandatory to download WearOS to use the MOODS app on the smartwatch?</h4>
 									<p>Yes, the smartwatch is only functional if it is set up through WearOS.</p>
 
-									<h4>Do I need a Google account to download and use the WearOS app?</h4>
-									<p>Yes. iOS users can download the WearOS app on the phone. A Google account is required to download the necessary application to the watch.</p>
+									<h4>Why is my watch running so slow?</h4>
+									<p>The MOODS software utilizes a significant portion of the resources on the watch.  We do not recommend adding a bunch of extra capabilities and/or integrations with other phone app for the duration of the study.  Using the watch for receiving notifications and text messages should work well; however, other tasks such as run tracking or nagivation will overburden the system.</p>
 
 								</div>
 								<div class="content">
+									<h4>Do I need a Google account to download and use the WearOS app?</h4>
+									<p>Yes. iOS users can download the WearOS app on the phone. A Google account is required to download the necessary application to the watch.</p>
+
 									<h4>Can I control what information is collected by the WearOS app?</h4>
 									<p>Yes. You are able to modify the settings on Android or iOS. This article has information about how to modify the settings: (note: this link is external to our website)  <a href="https://support.google.com/wearos/answer/6321353">https://support.google.com/wearos/answer/6321353</a></p>
 									<p>Please note that some permissions are required for the study application to run properly. </p>
