renamed:    pdfs/MOODS_consent.pdf -> pdfs/consent.pdf

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 									<li>Be able to provide your own informed consent and read/understand English language</li>
 									<li>Reside in the United States and intend to maintain residence in the United States for 100-day study period</li>
 								</ul>
-								<p>Please review our <a href="pdfs/MOODS_consent.pdf">consent form</a> before participating in the MOODS study.</p>
+								<p>Please review our <a href="pdfs/consent.pdf">consent form</a> before participating in the MOODS study.</p>
 								<p>This study is limited to 100 participants, organized in groups, enrolled bi-weekly.  Once you have submitted your interest to participate, you will be kept in the selection pool until you are selected or 100 participants have already completed the 100-day study.</p>
 								<p>If interested, please fill out the screening survey (LINK HERE).  If selected, you will receive an email invitation, describing the next steps to complete your enrollment in the MOODS study.</p>
 
