typo fix, augumented the definition of stress

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 							<div class="split">
 								<div class="content">
 									<h4>What is stress and how is it calculated?</h4>
-									<p>Stress is a dynamic process that reflects the brain’s response to internal and external factors, characteristics of a person and their circumstances, and interactions between people. The MOODS app uses algorithms to automatically analyze your heart rate via the LED sensor on the smartwatch. By applying a trained machine learning model, the MOODS app infers whether a physiological arousal in indicitive of stress.</p>
+									<p>Stress is a dynamic process that reflects the brain’s response to internal and external factors, characteristics of a person and their circumstances, and interactions between people. Stress may include interpersonal negative affect events such as conflicts, anger, frustration, and neutral events of high cognitive load such as engaged conversation, brainstorming, deep thinking, etc. The MOODS app uses algorithms to automatically analyze your heart rate via the LED sensor on the smartwatch. By applying a trained machine learning model, the MOODS app infers whether a physiological arousal in indicative of stress.</p>
 
 								</div>
 								<div class="content">
