--- a/index.html
+++ b/index.html
@@ -152,12 +152,11 @@
 				<div class="inner">
 				<div class="split style1 centered">
 						<section>
-							<h4 style="text-align: center;">App Demo</h4>
+							<h2 style="text-align: center;">MOODS Demo</h2>
 								<div style="text-align:center;">
-									<video width="275" autoplay loop muted playsinline>
-									<source src="images/moodsDemo1.mp4" type="video/mp4">
+									<video width="360" autoplay loop muted playsinline>
+									<source src="images/demo.mp4" type="video/mp4">
 									</video>
-									<p> App video goes here</p>
 								</div>
 						</section>
 
