--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							<div class="features">
 								<article class="icon fa-info-circle">
 									<h3>What does it do?</h3>
-									<p>Uses smartphone and wearable technology to measure your stress levels throughout the day.</p>
+									<p>UUses smartphone and wearable technology to measure your stress levels in your daily wearing of the watch.</p>
 								</article>
 								<article class="icon fa-question">
 									<h3>How does this research help advance science?</h3>
