Fixed menus on all pages

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="index.html#participate">Participate</a></li>
+							<li><a href="manual.pdf">Manual</a></li>
 							<li><a href="index.html#FAQ">FAQ</a></li>
 							<li><a href="terms.html">Terms</a></li>
 							<li><a href="team.html">Team</a></li>
@@ -105,7 +106,7 @@
 							<div class="features">
 								<article class="icon fa-info-circle">
 									<h3>What does it do?</h3>
-									<p>UUses smartphone and wearable technology to measure your stress levels in your daily wearing of the watch.</p>
+									<p>Uses smartphone and wearable technology to measure your stress levels throughout the day.</p>
 								</article>
 								<article class="icon fa-question">
 									<h3>How does this research help advance science?</h3>
