--- a/team.html
+++ b/team.html
@@ -38,8 +38,8 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="index.html#Participate">Participate</a></li>
-							<!-- <li><a href="#Data">Data</a></li> -->
+							<li><a href="index.html#participate">Participate</a></li>
+							<li><a href="manual.pdf">Manual</a></li>
 							<li><a href="index.html#FAQ">FAQ</a></li>
 							<li><a href="terms.html">Terms</a></li>
 							<li><a href="team.html">Team</a></li>
