--- a/terms.html
+++ b/terms.html
@@ -38,8 +38,8 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="index.html#App">Get the App</a></li>
-							<li><a href="index.html#Data">Data</a></li>
+							<li><a href="index.html#participate">Participate</a></li>
+							<li><a href="manual.pdf">Manual</a></li>
 							<li><a href="index.html#FAQ">FAQ</a></li>
 							<li><a href="terms.html">Terms</a></li>
 							<li><a href="team.html">Team</a></li>
