New synlink and fixed typo

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								</article>
 								<article class="icon fa-question">
 									<h3>How does this research help advance science?</h3>
-									<p>Results from this study may help society better understand stress and stressor detection through the exploraion of complex interactions between stress, daily behaviors, and environmental factors.</p>
+									<p>Results from this study may help society better understand stress and stressor detection through the exploration of complex interactions between stress, daily behaviors, and environmental factors.</p>
 								</article>
 								<article class="icon fa-users">
 									<h3>Who is it for?</h3>
