Added youtube video

--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
 								<p>Please review our <a href="pdfs/consent.pdf">consent form</a> before participating in the MOODS study. You will have the opportunity to review this form and provide consent to the research procedures via the MOODS app should you decide to participate.</p>
 								<p>Currently, participant recruitment is being limited via an invitation process. When recruitment is opened more broadly, a link to the screening questionnaire may be provided on this web page.</p>
 
+								<iframe width="630" height="473" src="https://www.youtube.com/embed/ZMhHS0H7IGg" frameborder="0" allowfullscreen></iframe>
+
 							</div>
 						</section>
 				</div>
