New participation text.

--- a/index.html
+++ b/index.html
@@ -164,19 +164,9 @@
 						<section>
 							<div class="inner style1">
 								<h2>Participate in the MOODS study</h2>
-								<p>Are you interested in tracking your daily stress and stressors via the MOODS smartwatch app? To be eligible to participate, you will need to:</p>
-								<ul>
-									<li>Be a generally healthy adult</li>
-									<li>Be willing to wear study-provided Fossil smartwatch during waking hours for 100-day study period</li>
-									<li>Be willing to label system-detected periods of stress every day for 100-day study period</li>
-									<li>Be willing to answer short weekly surveys during 100-day study period</li>
-									<li>Have smartphone compatible with the data collection application</li>
-									<li>Have adequate data connection (cellular data connection (minimal) or Wi-Fi (50MB/day))</li>
-									<li>Be able to provide your own informed consent and read/understand English language</li>
-									<li>Reside in the United States and intend to maintain residence in the United States for 100-day study period</li>
-								</ul>
-								<p>Please review our <a href="pdfs/consent.pdf">consent form</a> before participating in the MOODS study. You will have the opportunity to review this form and provide consent to the research procedures via the MOODS app should you decide to participate.</p>
-								<p>Currently, participant recruitment is being limited via an invitation process. When recruitment is opened more broadly, a link to the screening questionnaire may be provided on this web page.</p>
+								<p>Are you interested in tracking your daily stress and stressors via the MOODS smartwatch app? Please complete the screening questionnaire to make sure that you are eligible to participate: <a href="https://memphis.co1.qualtrics.com/jfe/form/SV_6PxNcOk83iga0R0">https://memphis.co1.qualtrics.com/jfe/form/SV_6PxNcOk83iga0R0</a></p>
+								<p>If you are eligible to participate, we will record your contact information and will email you with next steps to enroll in the study. Please note if we have many people screened for the study, we may randomly select invitees for enrollment over time.</p>
+								<p>You are welcome to review our <a href="pdfs/consent.pdf">consent form</a> If you are invited to enroll in the study, you will review and complete the informed consent process digitally via the study smartphone app should you decide to participate.</p>
 
 								<iframe width="630" height="473" src="https://www.youtube.com/embed/ZMhHS0H7IGg" frameborder="0" allowfullscreen></iframe>
 
