Updated stats block

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<section id="two" class="wrapper style1 special">
 				<a id="Data"></a>
 				<div class="inner">
-					<h2>Current MOODS Statistics</h2>
+					<h2>MOODS Participation</h2>
 						<div class="stats">
 							<article>
 								<h3><span id="participants"></span>Participants</h3>
