--- a/index.html
+++ b/index.html
@@ -164,9 +164,7 @@
 						<section>
 							<div class="inner style1">
 								<h2>Participate in the MOODS study</h2>
-								<p>Are you interested in tracking your daily stress and stressors via the MOODS smartwatch app? Please complete the screening questionnaire to make sure that you are eligible to participate: <a href="https://memphis.co1.qualtrics.com/jfe/form/SV_6PxNcOk83iga0R0">https://memphis.co1.qualtrics.com/jfe/form/SV_6PxNcOk83iga0R0</a></p>
-								<p>If you are eligible to participate, we will record your contact information and will email you with next steps to enroll in the study. Please note if we have many people screened for the study, we may randomly select invitees for enrollment over time.</p>
-								<p>You are welcome to review our <a href="pdfs/consent.pdf">consent form</a> If you are invited to enroll in the study, you will review and complete the informed consent process digitally via the study smartphone app should you decide to participate.</p>
+								<p>We have concluded recruitment for the MOODS Study. We thank all who have engaged with our study team for their interest and participation.</a></p>
 
 								<iframe width="630" height="473" src="https://www.youtube.com/embed/ZMhHS0H7IGg" frameborder="0" allowfullscreen></iframe>
 
