--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
+							<li><a href="manual.pdf">Results</a></li>
 							<li><a href="index.html#participate">Participate</a></li>
 							<li><a href="manual.pdf">Manual</a></li>
 							<li><a href="index.html#FAQ">FAQ</a></li>
