--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="index.html">Results</a></li>
+							<li><a href="results.html">Results</a></li>
 							<!--<li><a href="index.html">Visualizations</a></li>-->
 							<li><a href="index.html#participate">Participate</a></li>
 							<li><a href="manual.pdf">Manual</a></li>
