results page  changes

--- a/results.html
+++ b/results.html
@@ -87,14 +87,14 @@
 			
 
 
-		<section id="framework-section" class="wrapper style1 special" style="background-color: white; padding: 20px;">
+		<section id="framework-section" class="wrapper style1 special" >
 			<div class="inner">
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
 					MOODS Study as Personal Informatics System
 				</h2>
 		
 				<!-- Centering the image -->
-				<div style="display: flex; justify-content: center; align-items: center;">
+				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
 					<img id="framework" src="results/framewrok.png" width="1000" height="500" alt="MOODS framework" style="display: block; max-width: 100%; height: auto;" />
 				</div>
 			</div>
