--- a/results.html
+++ b/results.html
@@ -90,7 +90,7 @@
 		<section id="framework-section" class="wrapper style1 special" >
 			<div class="inner">
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
-					MOODS Study as Personal Informatics System
+					Illustration of key steps in the MOODS study
 				</h2>
 		
 				<!-- Centering the image -->
