--- a/results.html
+++ b/results.html
@@ -100,6 +100,18 @@
 			</div>
 		</section>
 
+		<section id="sankey-section" class="wrapper style1 special" >
+			<div class="inner">
+				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+					Design Rationales for Weekly Visualizations
+				</h2>
+		
+				<!-- Centering the image -->
+				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
+					<img id="sankey" src="results/sankey.png"  alt="sankey framework" style="display: block; max-width: 100%; height: auto;" />
+				</div>
+			</div>
+		</section>
 
 		<section id="wordcloud-section" class="wrapper style1 special">
 			<div class="inner">
