results page  changes

--- a/results.html
+++ b/results.html
@@ -113,26 +113,28 @@
 			</div>
 		</section>
 
-		<section id="wordcloud-section" class="wrapper style1 special">
+		<section id="awareness" class="wrapper style1 special">
 			<div class="inner">
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color:white; font-weight: bold;">
-					MOODS Study as Personal Informatics System
+					Changes in Self-Awareness of Stress and Stressors During the MOODS Study
+
 				</h2>
 				
 				<div style="display: flex; justify-content: center; gap: 50px; flex-wrap: wrap;">
 					
 					<div style="flex: 1; min-width: 400px; max-width: 500px;">
 						<h3 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color:white; font-weight: bold;">
-							Stressors
+							What motivated you to join the MOODS?
 						</h3>
-						<img id="wordcloud-stressors" src="stressors_wordcloud.jpg" width="500" height="500" alt="Stressors Word Cloud" />
+						<img id="motivation" src="results/motivation.png" width="500" height="500" alt="Stressors Word Cloud" />
 					</div>
 		
 					<div style="flex: 1; min-width: 400px; max-width: 500px;">
 						<h3 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color:white; font-weight: bold;">
-							Locations
+							What impact did the most recent visualizations have on you?
+
 						</h3>
-						<img id="wordcloud-locations" src="locations_wordcloud.jpg" width="500" height="500" alt="Locations Word Cloud" />
+						<img id="awareness" src="results/impact.png" width="500" height="500" alt="Locations Word Cloud" />
 					</div>
 				</div>
 			</div>
