--- a/results.html
+++ b/results.html
@@ -116,7 +116,7 @@
 		<section id="awareness" class="wrapper style1 special">
 			<div class="inner">
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color:white; font-weight: bold;">
-					Changes in Self-Awareness of Stress and Stressors During the MOODS Study
+					Changes in Self-Awareness of Stress and Stressors <br>During the MOODS Study
 
 				</h2>
 				
@@ -124,17 +124,17 @@
 					
 					<div style="flex: 1; min-width: 400px; max-width: 500px;">
 						<h3 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color:white; font-weight: bold;">
-							What motivated you to join the MOODS?
+							Motivation to join the MOODS Study
 						</h3>
-						<img id="motivation" src="results/motivation.png" width="500" height="500" alt="Stressors Word Cloud" />
+						<img id="motivation" src="results/motivation.png" width="500" height="400" alt="Stressors Word Cloud" />
 					</div>
 		
 					<div style="flex: 1; min-width: 400px; max-width: 500px;">
 						<h3 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color:white; font-weight: bold;">
-							What impact did the most recent visualizations have on you?
+							Impact of Weekly Visualizations
 
 						</h3>
-						<img id="awareness" src="results/impact.png" width="500" height="500" alt="Locations Word Cloud" />
+						<img id="awareness" src="results/impact.png" width="500" height="400" alt="Locations Word Cloud" />
 					</div>
 				</div>
 			</div>
