results page  changes, participate and manual tab removed, publication page added

--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="results.html">Results</a></li>
 							<!--<li><a href="index.html">Visualizations</a></li>-->
-							<li><a href="index.html#participate">Participate</a></li>
-							<li><a href="manual.pdf">Manual</a></li>
+							<!--<li><a href="index.html#participate">Participate</a></li>-->
+							<!--<li><a href="manual.pdf">Manual</a></li>-->
 							<li><a href="index.html#FAQ">FAQ</a></li>
 							<li><a href="terms.html">Terms</a></li>
 							<li><a href="team.html">Team</a></li>
+							<li><a href="publications.html">Publications</a></li>
 						</ul>
 					</nav>
 
