results page  changes

--- a/results.html
+++ b/results.html
@@ -141,6 +141,46 @@
 			</div>
 		</section>
 
+		<section id="sankey-section" class="wrapper style1 special">
+			<div class="inner">
+				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+					Design Rationales for Weekly Visualizations
+				</h2>
+		
+				<!-- Centering the image -->
+				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
+					<img id="sankey" src="results/sankey.png" alt="sankey framework" style="display: block; max-width: 100%; height: auto;" />
+				</div>
+			</div>
+		</section>
+		
+		<section id="awareness" class="wrapper style1 special">
+			<div class="inner">
+				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+					Changes in Self-Awareness of Stress and Stressors <br>During the MOODS Study
+				</h2>
+		
+				<!-- Flex container with larger gap -->
+				<div style="display: flex; justify-content: center; gap: 80px; flex-wrap: wrap; background-color: white; padding: 20px;">
+					<!-- First Image -->
+					<div style="flex: 1; min-width: 400px; max-width: 500px;">
+						<h3 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: black; font-weight: bold;">
+							Motivation to Join the MOODS Study
+						</h3>
+						<img id="motivation" src="results/motivation.png" width="500" height="400" alt="Stressors Word Cloud" />
+					</div>
+		
+					<!-- Second Image -->
+					<div style="flex: 1; min-width: 400px; max-width: 500px;">
+						<h3 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: black; font-weight: bold;">
+							Impact of Weekly Visualizations
+						</h3>
+						<img id="awareness" src="results/impact.png" width="500" height="400" alt="Locations Word Cloud" />
+					</div>
+				</div>
+			</div>
+		</section>
+
 			<section id="five" class="wrapper">
 				<div class="inner">
 					<h4 style="text-align: center">Website Disclaimer</h4>
