results page  changes

--- a/results.html
+++ b/results.html
@@ -124,10 +124,10 @@
 				</h2>
 		
 				<!-- Flex container with larger gap -->
-				<div style="display: flex; justify-content: center; gap: 80px; flex-wrap: wrap; background-color: white; padding: 20px;">
+				<div style="display: flex; justify-content: center; gap: 80px; flex-wrap: wrap; padding: 20px;">
 					<!-- First Image -->
 					<div style="flex: 1; min-width: 400px; max-width: 500px;">
-						<h3 style="text-align: center; font-size: 25; font-family: 'Arial', sans-serif; color: black; font-weight: bold;">
+						<h3 style="text-align: center; font-size: 25px; font-family: 'Arial', sans-serif; color: black; font-weight: bold;">
 							Motivation to Join the MOODS Study
 						</h3>
 						<img id="motivation" src="results/motivation.png" width="500" height="400" alt="Stressors Word Cloud" />
