results page  changes

--- a/results.html
+++ b/results.html
@@ -127,7 +127,7 @@
 				<div style="display: flex; justify-content: center; gap: 80px; flex-wrap: wrap; padding: 20px;">
 					<!-- First Image -->
 					<div style="flex: 1; min-width: 400px; max-width: 500px;">
-						<h3 style="text-align: center; font-size: 25px; font-family: 'Arial', sans-serif; color: black; font-weight: bold;">
+						<h3 style="text-align: center; font-size: 25px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
 							Motivation to Join the MOODS Study
 						</h3>
 						<img id="motivation" src="results/motivation.png" width="500" height="400" alt="Stressors Word Cloud" />
@@ -135,11 +135,65 @@
 		
 					<!-- Second Image -->
 					<div style="flex: 1; min-width: 400px; max-width: 500px;">
-						<h3 style="text-align: center; font-size: 25px; font-family: 'Arial', sans-serif; color: black; font-weight: bold;">
+						<h3 style="text-align: center; font-size: 25px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
 							Impact of Weekly Visualizations
 						</h3>
 						<img id="awareness" src="results/impact.png" width="500" height="400" alt="Locations Word Cloud" />
 					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="stress-section" class="wrapper style1 special" >
+			<div class="inner">
+				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+					Reduction in Self-reported Stress
+				</h2>
+		
+				<!-- Centering the image -->
+				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
+					<img id="stress" src="results/stress_reduction.png"  alt="sankey framework" style="display: block; max-width: 100%; height: auto;" />
+				</div>
+			</div>
+		</section>
+
+		<section id="motivation-section" class="wrapper style1 special" >
+			<div class="inner">
+				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+					Reduction in Self-reported Stress
+				</h2>
+		
+				<!-- Centering the image -->
+				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
+					<img id="motivation" src="results/motivation_behavior.png"  alt="sankey framework" style="display: block; max-width: 100%; height: auto;" />
+				</div>
+			</div>
+		</section>
+
+		<section id="behaviour" class="wrapper style1 special" >
+			<div class="inner">
+				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+					Fourteen Types of Self-Initiated Behavior Changes
+
+				</h2>
+		
+				<!-- Centering the image -->
+				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
+					<img id="behaviour" src="results/behavioral_changes.png"  alt="behavioral" style="display: block; max-width: 100%; height: auto;" />
+				</div>
+			</div>
+		</section>
+
+		<section id="approval" class="wrapper style1 special" >
+			<div class="inner">
+				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+					Approval Ratings of the MOODS Study
+
+				</h2>
+		
+				<!-- Centering the image -->
+				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
+					<img id="approval" src="results/approval.png"  alt="approval" style="display: block; max-width: 100%; height: auto;" />
 				</div>
 			</div>
 		</section>
