--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,21 @@
 
 			</header>
 
-		
+			<section id="publication-section" style="background-color: #f9f9f9; padding: 20px; border-radius: 8px; margin: 20px 0;">
+				<div style="max-width: 800px; margin: auto;">
+					<h2 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">Understanding the Impact of Contextual Cues on Stress Management</h2>
+					<p style="text-align: center; font-family: 'Arial', sans-serif; color: #555; font-style: italic;">Published in Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies, September 2025</p>
+					<div style="text-align: center; margin: 20px 0;">
+						<img src="https://via.placeholder.com/150" alt="Publication Thumbnail" style="border-radius: 8px;">
+					</div>
+					<p style="font-family: 'Arial', sans-serif; color: #333; line-height: 1.6;">
+						This study explores how contextual cues can influence stress management strategies in daily life. By integrating wearable technology with real-time data analysis, the research provides insights into personalized stress interventions.
+					</p>
+					<div style="text-align: center; margin-top: 20px;">
+						<a href="https://dl.acm.org/doi/10.1145/3613904.3642662" target="_blank" style="background-color: #0073e6; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-family: 'Arial', sans-serif;">Read Full Publication</a>
+					</div>
+				</div>
+			</section>
 
 			<section id="five" class="wrapper">
 				<div class="inner">
