--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,7 @@
 
 			</header>
 
-			<section id="publication-section" style="background-color: #f9f9f9; padding: 20px; border-radius: 8px; margin: 20px 0;">
+			<section id="publication-section" class="wrapper style1 special" style="background-color: #f9f9f9; padding: 20px; border-radius: 8px; margin: 20px 0;">
 				<div style="max-width: 800px; margin: auto;">
 					<h2 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">Momentary Stressor Logging and Reflective Visualizations: Implications for Stress Management with Wearables</h2>
 					<p style="text-align: center; font-family: 'Arial', sans-serif; color: #555; font-style: italic;">CHI '24: Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems
