--- a/publications.html
+++ b/publications.html
@@ -84,15 +84,20 @@
 
 			</header>
 
-			<section id="publication-section" class="wrapper style1 special" style="background-color: #f9f9f9; padding: 20px; border-radius: 8px; margin: 20px 0;">
-				<div style="max-width: 800px; margin: auto;">
-					<h2 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">Momentary Stressor Logging and Reflective Visualizations: Implications for Stress Management with Wearables</h2>
-					<p style="text-align: center; font-family: 'Arial', sans-serif; color: #555; font-style: italic;">CHI '24: Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems
-					</p>
-					
-					<div style="text-align: center; margin-top: 20px;">
-						<a href="https://dl.acm.org/doi/10.1145/3613904.3642662" target="_blank" style="background-color: #0073e6; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-family: 'Arial', sans-serif;">Read Full Publication</a>
+			<section id="publications" class="wrapper style1 special" style="background-color: #f9f9f9; padding: 50px 20px; border-radius: 8px; margin-top: 100px;">
+				<div class="inner" style="max-width: 900px; margin: auto;">
+					<h2 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">Publications</h2>
+			
+					<!-- First Publication -->
+					<div class="publication" style="background-color: white; padding: 20px; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+						<h3 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">Momentary Stressor Logging and Reflective Visualizations: Implications for Stress Management with Wearables</h3>
+						<p style="text-align: center; font-family: 'Arial', sans-serif; color: #555; font-style: italic;">CHI '24: Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems</p>
+						<div style="text-align: center; margin-top: 20px;">
+							<a href="https://dl.acm.org/doi/10.1145/3613904.3642662" target="_blank" style="background-color: #0073e6; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-family: 'Arial', sans-serif;">Read Full Publication</a>
+						</div>
 					</div>
+			
+					<!-- Future publications can be added here -->
 				</div>
 			</section>
 
