--- a/publications.html
+++ b/publications.html
@@ -84,7 +84,7 @@
 
 			</header>
 
-			<section id="publications" class="wrapper style1 special" style="background-color: #f9f9f9; padding: 50px 20px; border-radius: 8px; margin-top: 100px;">
+			<section id="publications" class="wrapper style1 special" style=" padding: 50px 20px; border-radius: 8px; margin-top: 100px;">
 				<div class="inner" style="max-width: 900px; margin: auto;">
 					<h2 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">Publications</h2>
 			
