--- a/publications.html
+++ b/publications.html
@@ -84,9 +84,9 @@
 
 			</header>
 
-			<section id="publications" class="wrapper style1 special" style=" padding: 50px 20px; border-radius: 8px; margin-top: 100px;">
-				<div class="inner" style="max-width: 900px; margin: auto;">
-					<h2 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">Publications</h2>
+			<section id="publications" class="wrapper style1 special">
+				<div class="inner" >
+					
 			
 					<!-- First Publication -->
 					<div class="publication" style="background-color: white; padding: 20px; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
