--- a/results.html
+++ b/results.html
@@ -160,7 +160,8 @@
 		<section id="motivation-section" class="wrapper style1 special" >
 			<div class="inner">
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
-					Reduction in Self-reported Stress
+					Participants’ Journey Towards  Self-Initiated Behavior Changes
+
 				</h2>
 		
 				<!-- Centering the image -->
