--- a/results.html
+++ b/results.html
@@ -106,7 +106,7 @@
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
 					Design Rationales for Weekly Visualizations
 				</h2>
-		
+				p>Sample of all the visualizations used in the MOODS Study can be found <a href="sample_visualizations/Weekly Visualization.html" target="_blank" style="color: #0073e6; text-decoration: none; font-weight: bold;">here</a>.</p>
 				<!-- Centering the image -->
 				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
 					<img id="sankey" src="results/sankey.png"  alt="sankey framework" style="display: block; max-width: 100%; height: auto;" />
