--- a/results.html
+++ b/results.html
@@ -106,11 +106,20 @@
 				<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
 					Design Rationales for Weekly Visualizations
 				</h2>
-				<p>Sample of all the visualizations used in the MOODS Study can be found <a href="https://odin.md2k.org/moods/39cf9343-b715-33bb-b7b5-6a610d826dfa/vis//week15/57aac946-64c1-11ee-82d6-d09466493b6d.html" target="_blank" style="color: #0073e6; text-decoration: none; font-weight: bold;">here</a>.</p>
+				
 				<!-- Centering the image -->
 				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
 					<img id="sankey" src="results/sankey.png"  alt="sankey framework" style="display: block; max-width: 100%; height: auto;" />
 				</div>
+
+				<p style="font-size: 18px; font-family: 'Arial', sans-serif; font-weight: bold; text-align: center; color: #333;">
+					Sample of all the visualizations used in the MOODS Study can be found 
+					<a href="https://odin.md2k.org/moods/39cf9343-b715-33bb-b7b5-6a610d826dfa/vis//week15/57aac946-64c1-11ee-82d6-d09466493b6d.html" 
+					   target="_blank" 
+					   style="color: #0073e6; text-decoration: none; font-weight: bold; font-size: 20px;">
+					   here
+					</a>.
+				</p>
 			</div>
 		</section>
 
