--- a/results.html
+++ b/results.html
@@ -111,8 +111,8 @@
 				<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
 					<img id="sankey" src="results/sankey.png"  alt="sankey framework" style="display: block; max-width: 100%; height: auto;" />
 				</div>
-
-				<p style="font-size: 18px; font-family: 'Arial', sans-serif; font-weight: bold; text-align: center; color: #333;">
+				<br>
+				<p style="font-size: 22px; font-family: 'Arial', sans-serif; font-weight: bold; text-align: center; color: white;">
 					Sample of all the visualizations used in the MOODS Study can be found 
 					<a href="https://odin.md2k.org/moods/39cf9343-b715-33bb-b7b5-6a610d826dfa/vis//week15/57aac946-64c1-11ee-82d6-d09466493b6d.html" 
 					   target="_blank" 
