--- a/results.html
+++ b/results.html
@@ -113,8 +113,8 @@
 				</div>
 				<br>
 				<p style="font-size: 22px; font-family: 'Arial', sans-serif; font-weight: bold; text-align: center; color: white;">
-					Sample of all the visualizations used in the MOODS Study can be found 
-					<a href="https://odin.md2k.org/moods/39cf9343-b715-33bb-b7b5-6a610d826dfa/vis//week15/57aac946-64c1-11ee-82d6-d09466493b6d.html" 
+					Sample of all the visualizations designed and deployed in the MOODS Study can be found 
+					<a href="sample_visualizations/Weekly Visualization.html" 
 					   target="_blank" 
 					   style="color: #0073e6; text-decoration: none; font-weight: bold; font-size: 22px;">
 					   here
