--- a/results.html
+++ b/results.html
@@ -78,6 +78,7 @@
 							<li><a href="index.html#FAQ">FAQ</a></li>
 							<li><a href="terms.html">Terms</a></li>
 							<li><a href="team.html">Team</a></li>
+							<li><a href="sample.html">Team</a></li>
 							<li><a href="publications.html">Publications</a></li>
 						</ul>
 					</nav>
