--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,6 @@
 -->
 <html>
 	<head>
-
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-7NGD19FCGC"></script>
 		<script>
@@ -19,53 +18,21 @@
 
 		<title>MOODS by MD2K</title>
 		<meta charset="utf-8" />
-
-		<!-- <meta property="og:image" content="https://moods.md2k.org/images/downloadMContainSmall.jpg"> -->
-		<meta property="og:title" content="MOODS">
-		<meta property="og:url" content="https://moods.md2k.org/">
-		<meta property="og:description" content="Mobile Open Observation of Daily Stressors">
-		<meta property="og:video:url" content="http://moods.md2k.org/images/moodsDemo1.mp4">
-		<meta property="og:video:secure_url" content="https://moods.md2k.org/images/moodsDemo1.mp4">
-		<meta property="og:locale" content="en_US">
-		<meta property="og:type" content="website">
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:url" content="https://moods.md2k.org/">
-		<meta name="twitter:title" content="MOODS">
-		<meta name="twitter:description" content="Mobile Open Observation of Daily Stressors">
-		<meta property="twitter:image" content="https://moods.md2k.org/images/moodsLogo300px.png">
-		<meta name="google-play-app" content="app-id=org.md2k.moods">
-		<meta name="author" content="MD2K Center of Excellence at The University of Memphis">
-
-
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<script src="assets/js/jquery.min.js"></script>
-		<script>
-			$(document).ready(function () {
-				$.getJSON("https://odin.md2k.org/app_api/stats", function(data) {
-					var current_data=data;
-
-					$('#participants').text(current_data['participants']);
-					$('#participant_days').text(current_data['participant_days']);
-					$('#recorded_stressors').text(current_data['recorded_stressors']);
-
-				})
-			});
-		</script>
 	</head>
 	<body id="top">
 
 		<!-- Header -->
-			<header id="header" class="alt">
+			<header id="header">
 
 				<!-- Logo -->
 					<div class="logo">
 						<a href="index.html">MOODS</a><span> The <a href="https://www.md2k.org" target="_blank">MD2K Center of Excellence</a> at <a href="https://www.memphis.edu" target="_blank">The University of Memphis</a> </span>
 					</div>
-
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -84,6 +51,7 @@
 
 			</header>
 
+
 			<section id="publications" class="wrapper style1 special">
 				<div class="inner" >
 					
@@ -100,27 +68,10 @@
 					<!-- Future publications can be added here -->
 				</div>
 			</section>
+		<!-- Main -->
+	
 
-			<section id="five" class="wrapper">
-				<div class="inner">
-					<h4 style="text-align: center">Website Disclaimer</h4>
-					<p style="text-align: center; font-size:0.8em;">Last Updated May 19, 2021</p>
-
-					<p style="font-size:0.8em;">The Center of Excellence for Mobile Sensor Data-to-Knowledge at the University of Memphis
-						(MD2K) is the owner and creator of the MOODS mobile application (Mobile App) and its
-						associated websites (moods.md2k.org) (Website). Both the Mobile App and the Website are
-						offered as parts of a research study, as overseen by an Institutional Review Board (IRB). Both
-						are informational only and neither is intended as a substitute for medical advice. There is no
-						guarantee as to the accuracy, availability or completeness of the information contained within the
-						Mobile App, the Website, or in any of their links.</p>
-					<p style="font-size:0.8em;">Neither MD2K nor the University of Memphis is responsible for any damages arising out of the
-						use of, reference to, or reliance on any information contained within the Mobile App, the
-						Website, or in any of the links or information therein.</p>
-					<p style="font-size:0.8em;">Construction of this Disclaimer and resolution of disputes thereof are governed by the laws of
-						the State of Tennessee.</p>
-				</div>
-			</section>
-
+		
 
 			<footer id="footer">
 						<p style="text-align: center; font-size: small; margin-left: 10%; margin-right: 10%;">&copy; 2021 MD2K Center of Excellence. All rights reserved. <br />
@@ -130,17 +81,16 @@
 					<a href="mailto:moods@md2k.org" style="color: #ffffff;">moods@md2k.org</a></p>
 				</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.selectorr.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/jquery.dropotron.min.js"></script>
+				<script src="assets/js/jquery.scrollex.min.js"></script>
+				<script src="assets/js/jquery.scrolly.min.js"></script>
+				<script src="assets/js/jquery.selectorr.min.js"></script>
+				<script src="assets/js/skel.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+				<script src="assets/js/main.js"></script>
 
-	</body>
-
-</html>
+		</body>
+	</html>
