--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
 			</header>
 
 
-			<section id="publications" class="wrapper style1 special">
+			<section id="publications" class="wrapper">
 				<div class="inner" >
 					
 			
