--- a/sample.html
+++ b/sample.html
@@ -52,7 +52,7 @@
 			</header>
 
 		<!-- Main -->
-			<section id="main" class="wrapper">
+			<!-- <section id="main" class="wrapper">
 				<div class="inner">
 
 					<header>
@@ -88,7 +88,7 @@
 						<img src="images/team/Samiei.png" alt="Samiei" style="width: 200px; padding: 5px; margin-right: 10px; margin-bottom: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" />
 							<p style="margin-bottom: 4.5em;"><strong>Shahin Samiei, Associate Director for Research & Studies.</strong> Shahin directly supports the user privacy aspects of the MOODS app, compliance with various local, state, and federal laws regarding health data, and coordinates with the office of legal counsel to develop informed consent documents.</p>
 				</div>
-			</section>
+			</section> -->
 
 			<footer id="footer">
 						<p style="text-align: center; font-size: small; margin-left: 10%; margin-right: 10%;">&copy; 2021 MD2K Center of Excellence. All rights reserved. <br />
