youtube video  added

--- a/publications.html
+++ b/publications.html
@@ -62,6 +62,7 @@
 						<p style="text-align: center; font-family: 'Arial', sans-serif; color: #555; font-style: italic;">CHI '24: Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems</p>
 						<div style="text-align: center; margin-top: 20px;">
 							<a href="https://dl.acm.org/doi/10.1145/3613904.3642662" target="_blank" style="background-color: #0073e6; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-family: 'Arial', sans-serif;">Read Full Publication</a>
+							<iframe width="630" height="473" src="https://www.youtube.com/embed/PGwZs8tZFaY" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 			
