youtube video  added

--- a/publications.html
+++ b/publications.html
@@ -58,8 +58,8 @@
 			
 					<!-- First Publication -->
 					<div class="publication" style="background-color: white; padding: 20px; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-						<h3 style="text-align: center; font-family: 'Arial', sans-serif; color: #333;">
-							<b>Momentary Stressor Logging and Reflective Visualizations: Implications for Stress Management with Wearables</b>
+						<h3 style="text-align: center; font-family: 'Arial', sans-serif; color: #333; font-weight: bold;">
+							Momentary Stressor Logging and Reflective Visualizations: Implications for Stress Management with Wearables
 						</h3>
 						<p style="text-align: center; font-family: 'Arial', sans-serif; color: #555; font-style: italic;">
 							CHI '24: Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems
