results page changes

--- a/sample.html
+++ b/sample.html
@@ -90,6 +90,21 @@
 				</div>
 			</section> -->
 
+
+			<section id="framework-section" class="wrapper style1 special" >
+				<div class="inner">
+					<h2 style="text-align: center; font-size: 32px; font-family: 'Arial', sans-serif; color: white; font-weight: bold;">
+						Illustration of key steps in the MOODS study
+					</h2>
+			
+					<!-- Centering the image -->
+					<div style="display: flex; justify-content: center; align-items: center; background-color: white; padding: 20px;">
+						<img id="framework" src="results/framewrok.png" width="1000" height="500" alt="MOODS framework" style="display: block; max-width: 100%; height: auto;" />
+					</div>
+				</div>
+			</section>
+
+
 			<footer id="footer">
 						<p style="text-align: center; font-size: small; margin-left: 10%; margin-right: 10%;">&copy; 2021 MD2K Center of Excellence. All rights reserved. <br />
 							The MD2K Center of Excellence was established via a grant (#U54EB020404) from the National Institutes of Health (NIH), through funds provided by the trans-NIH Big Data-to-Knowledge (BD2K) initiative, and is administered by the National Institute of Biomedical Imaging and Bioengineering (NIBIB).
