results page changes

--- a/results.html
+++ b/results.html
@@ -81,7 +81,7 @@
 					Sample of all the visualizations designed and deployed in the MOODS Study can be found 
 					<a href="sample_visualizations/Weekly Visualization.html" 
 					   target="_blank" 
-					   style="color: #0073e6; text-decoration: none; font-weight: bold; font-size: 22px;">
+					   style="color: #e60000; text-decoration: none; font-weight: bold; font-size: 22px;">
 					   here
 					</a>.
 				</p>
